black virtual console (tty / ctrl-alt-f2) on docking station monitors (regression, X-Server working)
Since v6.2-rc6-1204-ge8a9c6884297a (git bisect) the virtual console (tty / pressing ctrl-alt-f2) is black on my two external monitors connected via USB-C docking station. This only happens when the notebook lid is kept closed from the boot on.
Specifically this removed line seems to be needed: .test_ib = gfx_v9_0_ring_test_ib,
@jesse.zhang
Same problem exists with >= 6.1.35. (6.1.34 was fine)
Bad commit: v6.1.34-157-g4b4cae8e4b37c
Specifically the lines removed from amdgpu_dm.c
seem to be needed.
(line: .output_poll_changed = drm_fb_helper_output_poll_changed,
)
@tzimmermann @jesse.zhang
Instead of reverting the above mentioned v6.2-rc6-1204-ge8a9c6884297a, adding back the lines removed from amdgpu_dm.c
in v6.1.34-157-g4b4cae8e4b37c also solves the problem. Tested with 6.4-rc7.
So maybe v6.1.34-157-g4b4cae8e4b37c
is the root cause and v6.2-rc6-1204-ge8a9c6884297a
may not be to blame.
(v6.1.34-157-g4b4cae8e4b37c
is known as v6.1-rc2-525-g0e3172bac3f4 in mainline)
Issue moved here from:
#2492 (comment 1968262) Ryzen 3500U and 5650U: StandBy and External Monitors broken since >= 6.1
Setup:
Monitor 1 -> HDMI -> Dock
Monitor 2 -> VGA -> DisplayPort -> Dock
Dock -> USB-C Notebook
Hardware:
Model: HP EliteBook 845 G8 (notebook)
CPU+GPU: Ryzen 5650U incl. Radeon GPU
OS: openSUSE 15.4 and 15.5
Kernel: tested up to 6.4-rc7 compiled from kernel.org
Docking station: Dell Dock WD19
dmesg last working 6.1 kernel (tty working on dock displays):
6.1.34-156-gc6cbb4e1c10c_dock-monitor-tty-black.txt
dmesg first bad 6.1 kernel (tty NOT working on dock displays):
6.1.34-157-g4b4cae8e4b37_dock-monitor-tty-black.txt
dmesg of 6.3.8 with ring-test-ib line restored (tty working on dock displays):
Ryzen-5650U_6.3.8-REV-e8a9c6884-ring-test-ib-line.txt
@tkrah has the same problem with >= 6.2.
Torsten can you tell, if 6.1.35 is also broken on your system?
Patches tried without success: